Bug 1671950 - Fix assert in SVGSwitchFrame r=emilio

We need to be consistent with the expectations of SVGContainerFrame::ReflowSVGNonDisplayText calling itself recursively on non-SVG content.

Differential Revision: https://phabricator.services.mozilla.com/D94048